# opencv-mobile

./: .gitignore  README.md  fix-windows-sdk-26100-arm64-wchar.patch  ios.toolchain.cmake  opencv-2.4.13.7-enable-cxx11.patch  opencv-2.4.13.7-fix-highgui-include.patch  opencv-2.4.13.7-link-openmp.patch  opencv-2.4.13.7-minimal-install.patch  opencv-2.4.13.7-newer-msvc.patch  opencv-2.4.13.7-no-link-stdc++.patch  opencv-2.4.13.7-no-local-static.patch  opencv-2.4.13.7-no-zlib.patch  opencv-3.4.13-no-rtti.patch  opencv-3.4.13-no-zlib.patch  opencv-3.4.13-unsafe-xadd.patch  opencv-3.4.15-no-rtti.patch  opencv-3.4.15-no-zlib.patch  opencv-3.4.15-unsafe-xadd.patch  opencv-3.4.16-no-rtti.patch  opencv-3.4.16-no-zlib.patch  opencv-3.4.16-unsafe-xadd.patch  opencv-3.4.18-no-rtti.patch  opencv-3.4.18-no-zlib.patch  opencv-3.4.18-unsafe-xadd.patch  opencv-3.4.20-fix-emscripten-include.patch  opencv-3.4.20-link-openmp.patch  opencv-3.4.20-minimal-install.patch  opencv-3.4.20-no-rtti.patch  opencv-3.4.20-unsafe-xadd.patch  opencv-4.5.1-no-rtti.patch  opencv-4.5.1-no-zlib.patch  opencv-4.5.1-unsafe-xadd.patch  opencv-4.5.3-no-rtti.patch  opencv-4.5.3-no-zlib.patch  opencv-4.5.3-unsafe-xadd.patch  opencv-4.5.4-no-rtti.patch  opencv-4.5.4-no-zlib.patch  opencv-4.5.4-unsafe-xadd.patch  opencv-4.6.0-no-rtti.patch  opencv-4.6.0-no-zlib.patch  (+11 more)
.github/: FUNDING.yml
.github/workflows/: android.yml  build.yml  ci.yml  linux.yml  macos.yml  release.yml  test.yml  webassembly.yml  windows.yml
highgui/: CMakeLists.txt
highgui/include/opencv2/: dnn.hpp  highgui.hpp
highgui/include/opencv2/dnn/: dnn.hpp
highgui/include/opencv2/highgui/: highgui.hpp
highgui/src/: bmpWnd.cpp  bmpWnd.h  capture_cvi.cpp  capture_cvi.h  capture_v4l2.cpp  capture_v4l2.h  capture_v4l2_aw_isp.cpp  capture_v4l2_aw_isp.h  capture_v4l2_rk_aiq.cpp  capture_v4l2_rk_aiq.h  display_Win32.cpp  display_fb.cpp  display_fb.h  display_win32.cpp  display_win32.h  exif.cpp  exif.hpp  highgui.cpp  jpeg_decoder_aw.cpp  jpeg_decoder_aw.h  jpeg_decoder_cvi.cpp  jpeg_decoder_cvi.h  jpeg_encoder_aw.cpp  jpeg_encoder_aw.h  jpeg_encoder_rk_mpp.cpp  jpeg_encoder_rk_mpp.h  jpeg_encoder_v4l_cix.cpp  jpeg_encoder_v4l_cix.h  jpeg_encoder_v4l_rpi.cpp  jpeg_encoder_v4l_rpi.h  kanna_rotate.cpp  kanna_rotate.h  nms.cpp  stb_image.h  v4l2_capture_rk_aiq.cpp  v4l2_capture_rk_aiq.h  videocapture.cpp  videowriter.cpp  writer_http.cpp  writer_http.h
misc/: draw_text.h
patches/: Info.plist  draw_text.h  fontface.html  mono_font_data.h  opencv-2.4.13.7-cmake-cmp0042-new.patch  opencv-2.4.13.7-drawing-mono-font.patch  opencv-2.4.13.7-fix-highgui-include.patch  opencv-2.4.13.7-fix-windows-arm-arch.patch  opencv-2.4.13.7-minimal-install.patch  opencv-2.4.13.7-newer-msvc.patch  opencv-2.4.13.7-no-gpu.patch  opencv-2.4.13.7-no-rtti.patch  opencv-2.4.13.7-unsafe-xadd.patch  opencv-3.4.20-drawing-mono-font.patch  opencv-3.4.20-fix-windows-arm-arch.patch  opencv-3.4.20-minimal-install.patch  opencv-3.4.20-newer-msvc.patch  opencv-3.4.20-no-gpu.patch  opencv-3.4.20-no-rtti.patch  opencv-3.4.20-no-zlib.patch  opencv-4.10.0-drawing-mono-font.patch  opencv-4.10.0-fix-windows-arm-arch.patch  opencv-4.10.0-link-openmp.patch  opencv-4.10.0-minimal-install.patch  opencv-4.10.0-no-atomic.patch  opencv-4.10.0-no-gpu.patch  opencv-4.10.0-no-rtti.patch  opencv-4.10.0-no-zlib.patch  opencv-4.10.0-old-licheerv-nano-pins.patch  opencv-4.10.0-unsafe-xadd.patch  opencv-4.11.0-drawing-mono-font.patch  opencv-4.11.0-fix-windows-arm-arch.patch  opencv-4.11.0-link-openmp.patch  opencv-4.11.0-minimal-install.patch  opencv-4.11.0-no-atomic.patch  opencv-4.11.0-no-gpu.patch  opencv-4.11.0-no-rtti.patch  opencv-4.11.0-no-zlib.patch  opencv-4.11.0-unsafe-xadd.patch  opencv-4.12.0-drawing-mono-font.patch  (+28 more)
test/: CMakeLists.txt  main.cpp
toolchains/: aarch64-openwrt-linux-gnu.toolchain.cmake  arm-openwrt-linux-gnueabi.toolchain.cmake  arm-openwrt-linux-muslgnueabi.toolchain.cmake  arm-rockchip830-linux-uclibcgnueabihf.toolchain.cmake  c906-v261.toolchain.cmake  c908-v2102.toolchain.cmake  ios.toolchain.cmake  macos-arm64.toolchain.cmake  riscv32-linux-musl.toolchain.cmake  riscv64-unknown-linux-musl.toolchain.cmake
